fix logo on mobile

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -102,24 +102,36 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   padding: 10px 0;
 }
 
-#header .logo h1 {
-  font-size: 28px;
-  margin: 0;
-  padding: 4px 0;
-  line-height: 1;
-  font-weight: 400;
-  letter-spacing: 3px;
-}
+#header {
+  .logo {
+    h1 {
+      font-size: 28px;
+      margin: 0;
+      padding: 4px 0;
+      line-height: 1;
+      font-weight: 400;
+      letter-spacing: 3px;
 
-#header .logo h1 a, #header .logo h1 a:hover {
-  color: #111;
-  text-decoration: none;
-}
+      a, a:hover{
+        color: #111;
+        text-decoration: none;
+      }
 
-#header .logo img {
-  padding: 0;
-  margin: 0 20px 0 0;
-  max-height: 40px;
+      @media (max-width: $sm-screen) {
+        font-size: 20px;
+      }
+    }
+
+    img {
+      padding: 0;
+      margin: 0 20px 0 0;
+      max-height: 40px;
+
+      @media (max-width: $sm-screen) {
+        max-height: 30px;
+      }
+    }
+  }
 }
 
 #main {
